--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="#hero" data-after="Home">Home</a></li>
                     <li><a href="projects.html" data-after="Projects">Projects</a></li>
-                    <li><a href="#contact" data-after="Contact">Contact</a></li>
+                    <li><a href="contact.html" data-after="Contact">Contact</a></li>
                     <li><a href="#demo" data-after="Demo">Demo</a></li>
                     <li><a href="#report" data-after="Report">Report</a></li>
                 </ul>
