--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="projects.html" data-after="Projects">Projects</a></li>
                     <li><a href="contact.html" data-after="Contact">Contact</a></li>
                     <li><a href="demo.html data-after="Demo">Demo</a></li>
-                    <li><a href="#report" data-after="Report">Report</a></li>
+                    <li><a href="report.html data-after="Report">Report</a></li>
                 </ul>
             </div>
         </div>
