--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="hamburger"><div class="bar"></div></div>
                 <ul>
                     <li><a href="#hero" data-after="Home">Home</a></li>
-                    <li><a href="projects.html" data-after="Projects">Projects</a></li>
+                    <li><a href="project.html" data-after="Projects">Projects</a></li>
                     <li><a href="contact.html" data-after="Contact">Contact</a></li>
                     <li><a href="demo.html data-after="Demo">Demo</a></li>
                     <li><a href="report.html data-after="Report">Report</a></li>
