--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          <h1>Hello! <span></span></h1>
          <h1>My Name is <span></span></h1>
          <h1>Jannat <span></span></h1>
-         <a href="#projects" type="button" class="cta">portfolio</a>
+         <a href="project.html" type="button" class="cta">portfolio</a>
          </div>
          </div>
     </section>
