--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
     <section id="projects">
         <div class="projects container">
             <div class="projects-top">
-                <h1 class="section-title">Pro<span>j</spam>ects</h1>
+                <h1 class="section-title">Pro<span>j</span>ects</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, laboriosam optio atque aut beatae rem repudiandae eaque impedit aspernatur? Voluptatum ut laudantium nesciunt veritatis nam tempore cumque nihil placeat ducimus?</p>
             </div>
             <div class="projects-bottom">
