--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             
             
     </section>
-    <!--end srvice section-->
+    <!--end projects section-->
 
     <!----Contact Section-->
     <!--Contact Section-->
