--- a/demo.html
+++ b/demo.html
@@ -25,5 +25,16 @@
             </div>
         </div>
     </section>
+
+    <section id="demo">
+        <div class="demo container ">
+            <div class="demo-top">
+           <h1 class="section-title">Video</h1>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime totam vel quia ipsum quidem! Velit sed distinctio dignissimos eius, </p>
+        </div>
+         <div class="demo-bottom">
+            <video controls src="images/WhatsApp Video 2024-03-10 at 19.36.27.mp4"></video>
+            </div>
+    </section>
 </body>
 </html>
