--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
 </section>
     <!--end demo section-->
 
+<!--footer section-->
+
+    <footer class="footer-section bg-black">
+        <div class="container">
+            <p class="para fill-white">Copyright &copy;2024 All rights reserved by Jannatgangar</p>
+        </div>
+       </footer>
+       <!--end footer-->
+
 
     <script src="./app.js"></script>
 
