--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section id="report">
         <div class="report container">
             <div class="report-top">
-                <h1 class="section title"> site report</h1>
+                <h1 class="section title"> Site Report</h1>
             </div>
             <div class="report-bottom">
                 <div class="report-item">
