--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                         <p>In this assignment, I have used a contrast of beige and navy blue colour and the reason I used this contrast is once i was scrolling through instagram, I saw a reel which said a combination of navy blue and beige makes a very expensive combo so I used it just give my website a modernised look.  
                         </p>
                     </div>
+                <div class="Validation screenshots">
+                <p></p>
+            </div>
             </div>
 
         </div>
