--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <section id="demo">
     <div class="demo container ">
         <div class="demo-top">
-       <h1 class="section-title">Video</h1>
+       <h1 class="section-title">Vi<span>d</span>eo</h1>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime totam vel quia ipsum quidem! Velit sed distinctio dignissimos eius, </p>
     </div>
      <div class="demo-bottom">
@@ -114,7 +114,7 @@
     <section id="report">
         <div class="report container">
             <div class="report-top">
-                <h4 class="section title">Report</h4>
+            <h1 class="section-title">Re<span>p</span>ort</h1>
             </div>
             <div class="report-bottom">
                 <div class="report-item">
@@ -131,9 +131,14 @@
                         <p>In this assignment, I have used a contrast of beige and navy blue colour and the reason I used this contrast is once i was scrolling through instagram, I saw a reel which said a combination of navy blue and beige makes a very expensive combo so I used it just give my website a modernised look.  
                         </p>
                     </div>
-                <div class="Validation screenshots">
-                <p></p>
-            </div>
+                <div class="report-item">
+                    <h2>Validation screenshots</h2>
+                    <p1>
+                    <img src="images/Screenshot 2024-03-16 at 10.45.21.png" height="50">
+                    <img src="images/Screenshot 2024-03-16 at 10.46.42.png" height="50">
+                    <img src="images/Screenshot 2024-03-16 at 10.47.35.png" height="50">
+                    </p1>
+                 </div>
             </div>
 
         </div>
