--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,7 @@
     <section id="demo">
         <div class="demo container ">
             <div class="demo-top">
-           <h1 class="section-title">Video</h1>
+           <h1 class="section-title">Vi<span>d</span>eo</h1>
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime totam vel quia ipsum quidem! Velit sed distinctio dignissimos eius, </p>
         </div>
          <div class="demo-bottom">
