--- a/report.html
+++ b/report.html
@@ -50,6 +50,11 @@
             <p>In this assignment, I have used a contrast of beige and navy blue colour and the reason I used this contrast is once i was scrolling through instagram, I saw a reel which said a combination of navy blue and beige makes a very expensive combo so I used it just give my website a modernised look.  
             </p>
             </div>
+                <div class="report-item">
+                    <h2>Video Link</h2>
+                    <a href="video link"></a>
+                    <a href="https://share.icloud.com/photos/096ntpl8rkz5578PqwOtI6t7A"></a>
+                </div>
             <div class="report-item">
                     <h2>Validation screenshots</h2>
                     <p1>
