--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
                         </p>
                     </div>
                 <div class="report-item">
+                    <h2>Video Link</h2>
+                    <a href="video link"></a>
+                    <a href="https://share.icloud.com/photos/096ntpl8rkz5578PqwOtI6t7A"></a>
+                </div>
+                <div class="report-item">
                     <h2>Validation screenshots</h2>
                     <p1>
                     <img src="images/Screenshot 2024-03-16 at 10.45.21.png" height="50">
