--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime totam vel quia ipsum quidem! Velit sed distinctio dignissimos eius, </p>
     </div>
      <div class="demo-bottom">
-        <video controls src="images/WhatsApp Video 2024-03-10 at 19.36.27.mp4"></video>
+        <video controls src="images/Screen Recording 2024-03-16 at 15.02.16.mov" width="700"></video>
         
     </div>
 </section>
