--- a/index.html
+++ b/index.html
@@ -133,9 +133,13 @@
                     </div>
                 <div class="report-item">
                     <h2>Video Link</h2>
-                    <a href="video link"></a>
-                    <a href="https://share.icloud.com/photos/096ntpl8rkz5578PqwOtI6t7A"></a>
-                </div>
+                    <p><iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/BSGploB9It8?si=TFsV2Zb241ilCvz8"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe></p>
+                            </div>
+                
                 <div class="report-item">
                     <h2>Validation screenshots</h2>
                     <p1>
