--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="contact">
         <div class="container">
             <div class="column-container">
-                <div class="content">
+                <div class="section-id">
                     <h3>Contact Me</h3>
                     <h1>Get In Touch</h1>
                 </div>
