--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <section id="contact">
         <div class="container">
             <div class="column-container">
-                <div class="content">
+                <div class="section-title">
                     <h3>Contact Me</h3>
                     <h1>Get In Touch</h1>
                 </div>
